--- a/TextFixedWidthGenerator/TextFixedWidthGenerator.csproj
+++ b/TextFixedWidthGenerator/TextFixedWidthGenerator.csproj
@@ -11,6 +11,12 @@
     <Description>The TextFixedWidthGenerator is a C# library designed to generate text files with fixed-length lines. It allows developers to define a set of customizable settings for each column, including column size, padding character, and padding direction (left or right). This tool is ideal for creating structured text files where consistent line lengths and precise formatting are crucial, such as in data exchange formats, legacy system integrations, or any scenario requiring uniform text file structure.
 
 By using this library, you can easily automate the creation of text files that adhere to specific formatting requirements, ensuring compatibility and readability across various systems.</Description>
+    <PackageProjectUrl>https://github.com/dovidW/TextFixedWidthGenerator</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/dovidW/TextFixedWidthGenerator</RepositoryUrl>
+    <PackageTags>מסב;massav;text;fixed-width</PackageTags>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
 </Project>
